CD1_A3/javali_tests/A1/A1/A2/testest.javali.err
Debug information for file: .\javali_tests\A1\A1\A2\testest.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Ahahaha1, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: doNothing, returnType: void)
| | Seq ()
| | Seq ()
| | | Assign ()
| | | | Var (name: a)
| | | | BinaryOp (operator: B_PLUS)
| | | | | MethodCallExpr (methodName: du)
| | | | | | ThisRef ()
| | | | | | Var (name: a)
| | | | | BinaryOp (operator: B_TIMES)
| | | | | | MethodCallExpr (methodName: lala)
| | | | | | | ThisRef ()
| | | | | | MethodCallExpr (methodName: gaga)
| | | | | | | Var (name: q)
| | | | | | | IntConst (value: 38)
| | | Assign ()
| | | | Field (fieldName: b)
| | | | | Index ()
| | | | | | Var (name: a)
| | | | | | Var (name: x)
| | | | Var (name: a)
| | | Assign ()
| | | | MethodCallExpr (methodName: do)
| | | | | Index ()
| | | | | | Field (fieldName: k)
| | | | | | | Field (fieldName: a)
| | | | | | | | ThisRef ()
| | | | | | IntConst (value: 5)
| | | | Field (fieldName: a)
| | | | | ThisRef ()
ClassDecl (name: KAKAKA12, superClass: Ahahaha1)
| VarDecl (name: x, type: int)
| VarDecl (name: y, type: int)
| VarDecl (name: z, type: int)
| MethodDecl (argumentNames: [], argumentTypes: [], name: doNothing, returnType: void)
| | Seq ()
| | | MethodDecl (argumentNames: [a], argumentTypes: [int], name: innerMethod, returnType: void)
| | | | Seq ()
| | | | Seq ()
| | | | | Assign ()
| | | | | | Var (name: field1)
| | | | | | NewObject (typeName: Ahahaha1)
| | Seq ()
| | | Assign ()
| | | | Var (name: a)
| | | | BinaryOp (operator: B_PLUS)
| | | | | MethodCallExpr (methodName: du)
| | | | | | ThisRef ()
| | | | | | Var (name: a)
| | | | | BinaryOp (operator: B_TIMES)
| | | | | | MethodCallExpr (methodName: lala)
| | | | | | | ThisRef ()
| | | | | | MethodCallExpr (methodName: gaga)
| | | | | | | Var (name: q)
| | | | | | | IntConst (value: 38)
| | | WhileLoop ()
| | | | BinaryOp (operator: B_GREATER_THAN)
| | | | | Var (name: x)
| | | | | IntConst (value: 7)
| | | | Seq ()
| | | | | Assign ()
| | | | | | Field (fieldName: z)
| | | | | | | Field (fieldName: y)
| | | | | | | | Var (name: x)
| | | | | | BinaryOp (operator: B_PLUS)
| | | | | | | BinaryOp (operator: B_TIMES)
| | | | | | | | IntConst (value: 1000)
| | | | | | | | FloatConst (value: 302.4)
| | | | | | | BinaryOp (operator: B_TIMES)
| | | | | | | | IntConst (value: 1312)
| | | | | | | | BinaryOp (operator: B_PLUS)
| | | | | | | | | MethodCallExpr (methodName: call)
| | | | | | | | | | ThisRef ()
| | | | | | | | | | Var (name: i)
| | | | | | | | | Var (name: y)
| | | | | IfElse ()
| | | | | | BinaryOp (operator: B_EQUAL)
| | | | | | | Field (fieldName: y)
| | | | | | | | Var (name: x)
| | | | | | | NullConst ()
| | | | | | Seq ()
| | | | | | | ReturnStmt ()
| | | | | | | | Field (fieldName: z)
| | | | | | | | | Field (fieldName: y)
| | | | | | | | | | Var (name: x)
| | | | | | Nop ()
| VarDecl (name: fiend1, type: Ahahaha1)
Error message from reference is: Nested methods are not supported.
Error message: Ahahaha1.du in Ahahaha1.doNothing(...)

Phase semantic failed because we expected to see:
NESTED_METHODS_UNSUPPORTED
But we actually saw:
NO_SUCH_METHOD
The difference is:
At line   1 /   1:
< NESTED_METHODS_UNSUPPORTED
> NO_SUCH_METHOD

