CD1_A3/javali_tests/A1/A1/A2/testest.javali
class Ahahaha1 {

	void doNothing()
	{
		a = du(a)+(lala()*q.gaga(38));

		a[x].b = a;
		this.a.k[5].do() = this.a;

 	}
}

class KAKAKA12 extends Ahahaha1{

	int x,y,z;

	void doNothing()
	{
		void innerMethod(int a)
		{
			field1 = new Ahahaha1();
		}


		a = du(a)+(lala()*q.gaga(38));

		while (x > 7)
		{
			x.y.z = 1000*302.4+1312*(call(i)+y);
			if (x.y == null)
			{
				return x.y.z;
			}
		}

 	}

	Ahahaha1 fiend1;
}



